manifests/apps/nginx-demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo-app
  namespace: nginx-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo-app
  template:
    metadata:
      labels:
        app: nginx-demo-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.5
          ports:
            - containerPort: 80
