manifests/apps/nginx-demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-app
  namespace: nginx-demo-app
spec:
  selector:
    app: nginx-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
