manifests/apps/nginx-demo-app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-demo-app
  namespace: nginx-demo-app
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateways-system
  hostnames:
    - nginx-demo.imavgs.no
  rules:
    - backendRefs:
        - name: nginx-demo-app
          port: 80
